# repogauge

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  pyproject.toml  ralph  src.py
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  pages.yml  sample-evaluate-matrix.yml  sample-harvest-testcases.yml
.ralph/: agent-identities.tsv
docs/: DESIGN.md  import_multilang_support.md  junit_parser_contract.md  language_adapters.md  repogauge_bead_plan.md
docs/ADRs/: 0001-mvp-architecture.md  0002-language-adapter-registry.md
docs/schema/: contracts.md
docs/tutorials/: mine-review-export.md  run-matrix.md  troubleshooting.md
examples/: config.yaml  matrix.codex-cli.yaml  matrix.compare_cli.yaml  matrix.compare_openai.yaml  matrix.opencode-cli.yaml  matrix.yaml
repogauge/: __init__.py  artifacts.py  cli.py  cloud_bundle.py  config.py  exec.py  llm.py  logging_utils.py  manifest.py  review.py
repogauge/export/: __init__.py  adapter.py  dataset.py  materialize.py  specs.py  split_patch.py
repogauge/lang/: __init__.py  _go_test_parser.py  _rust_test_parser.py  go.py  java.py  javascript.py  python.py  rust.py
repogauge/mining/: __init__.py  enrich.py  file_roles.py  inspect.py  scan.py  score.py  signature.py  synthesize.py
repogauge/parsers/: __init__.py  junit.py
scripts/: diff_self_gauge.sh  gauge_sample.sh  gauge_self.sh  repair_imported_bead_dependencies.py
site/: articles.html  hosted_preview.html  index.html  sample_report.html
src/: core.py  feature.py  main.py  module.py
tests/: conftest.py  test_core.py  test_module.py
(+80 files in other folders)
