[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repogauge"
version = "0.0.0"
description = "Local SWE-bench-style dataset and harness helper for repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.2",
    "rich>=14.1.0",
    "swebench>=4.1.0",
]

[project.scripts]
repogauge = "repogauge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["repogauge*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
